--- a/examples/message_board/config.json
+++ b/examples/message_board/config.json
@@ -3,8 +3,8 @@
 	"mb" : {
 		"media" : "/media",
 		"root" : "",
-		"connection_string" : "sqlite3:db=mb.db;@pool_size=10"
-		//"connection_string" : "mysql:database=test;user=root;password=root;@pool_size=10"
+		"sqlite3_connection_string" : "sqlite3:db=mb.db;@pool_size=10", 
+		"connection_string" : "mysql:database=test;user=test;password=test;@pool_size=10"
 	},
 	"service" : {
 		"api" : "http",
@@ -37,7 +37,7 @@
 	},
 	"cache" : {
 		"backend" : "thread_shared",
-		"limit" : 100,
+		"limit" : 100
 	},
 	"security" : {
 		"csrf" : {
