--- a/examples/hello_world/Makefile
+++ b/examples/hello_world/Makefile
@@ -1,4 +1,4 @@
-LIBS=-lcppcms -lbooster
+LIBS= -lcppcms -lbooster
 
 
 all: hello
@@ -7,4 +7,4 @@ hello: hello.cpp
 	$(CXX) -O2 -Wall -g hello.cpp -o hello ${LIBS}
 
 clean:
-	rm -fr hello hello.exe cppcms_rundir
+	rm -fr hello.dSYM hello hello.exe cppcms_rundir
